k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expirationservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expirationservice
  template:
    metadata:
      labels:
        app: expirationservice
    spec:
      containers:
        - name: expirationservice
          image: kolabayo360/trollyexpiration
