k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: kolabayo360/trollyclient
          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "512Mi"
              cpu: "2000m"
---
apiVersion: v1
kind: Service
metadata:
  name: client-serv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
