k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordersservice
  template:
    metadata:
      labels:
        app: ordersservice
    spec:
      containers:
        - name: ordersservice
          image: kolabayo360/trollyorders
---
apiVersion: v1
kind: Service
metadata:
  name: ordersservice-serv
spec:
  selector:
    app: ordersservice
  ports:
    - name: ordersservice
      protocol: TCP
      port: 3000
      targetPort: 3000
