k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentsservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentsservice
  template:
    metadata:
      labels:
        app: paymentsservice
    spec:
      containers:
        - name: paymentsservice
          image: kolabayo360/trollypayments
---
apiVersion: v1
kind: Service
metadata:
  name: paymentsservice-serv
spec:
  selector:
    app: paymentsservice
  ports:
    - name: paymentsservice
      protocol: TCP
      port: 3000
      targetPort: 3000
