k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketservice
  template:
    metadata:
      labels:
        app: ticketservice
    spec:
      containers:
        - name: ticketservice
          image: kolabayo360/trollyticketing
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketservice-serv
spec:
  selector:
    app: ticketservice
  ports:
    - name: ticketservice
      protocol: TCP
      port: 3000
      targetPort: 3000
